
plugin.py
control
    Updated version tag to 2.01-rc7
    Built ipk
    Added the 2.01-rc7 tag to git

========== 2.01-rc8 STARTS

Skin_medium.py
Skin_small.py
plugin.py
    Move time and duration or programme into own window, so it is only
    displayed once.
    Allow () property groups as well as []
    Do not show property groups in right-to-left translations.

plugin.py
control
    Updated version tag to 2.01-rc8
    Built ipk
    Added the 2.01-rc8 tag to git

========== 2.01-rc9 STARTS

plugin.py
    Remove self.source and self.destination and replace them throughout
    by CfgPlTr.source.value and CfgPlTr.destination.value, as the self.*
    values are not updated after a language change in the config menu.

plugin.py
    Fix split_off_props() and its regexes to trap minimal property
    groups (with the correct end bracket matching the opening one).
    Check for [ within the first 12 characters to allow for an opening
    () group.

plugin.py
control
    Updated version tag to 2.01-rc9
    Built ipk
    Added the 2.01-rc9 tag to git

========== 2.01-release

    Push to master thread from Dev

    Om master
plugin.py
    Updated version tag to 2.01-release
    Built ipk
    Added the 2.01-release tag to git

========== 2.02-rc1 STARTS [10 Feb 2021]

plugin.py
    Implemented a loop over Google translate calls using the
    PART_translate() function to overcome any ~7500 character limit.
    DO_translation() now unzips for call to this then stitches things
    back up, as required.
    No longer distinguish URLError, HTTPError and socket errors. An
    error is now just a failure to translate.
    Updated version tag to 2.02-rc1

plugin.py
    Add code to ignore props with rtol text to My_setEvent() lookups as
    well.

plugin.py
    Don't unquote() the translated text - it isn't quote()d.
    If an EPG translation doesn't start with sepline there has been a
    problem, so handle it accordingly.